<resources>
    <string name="app_name">App Idel</string>
    <string name="holaidel">Hola Idelfonso</string>
    <string name="entre_en">Entré a </string>
    <string name="btnintent">Botón que ejecuta intento</string>
    <!--STRING ENTREGABLE 1-->
    <string name="e1lt_titulo">Formulario de datos personales</string>
    <string name="e1lt_nombre">Nombre</string>
    <string name="e1lt_apellido1">Primer apellido</string>
    <string name="e1lt_apellido2">Segundo apellido</string>
    <string name="e1lt_edad">Edad</string>
    <string name="e1lt_tel">Teléfono</string>
    <string name="e1lt_email">Correo</string>
    <string name="e1lt_btn">Enviar datos</string>
    <string name="e1lt_completo">Nombre completo</string>
    <string name="e1lt_error">Falta completar los siguientes datos:</string>
    <string name="e1lt_susses">Los datos que proporcionaste son:</string>
    <string name="e1lt_sindata">Sin DATOS</string>
    <string name="e1lt_regresar">Regresar</string>
    <!--STRING ENTREGABLE 2-->
    <string name="e3nombrepet">:: Mascotas ::</string>
    <string name="e2visualizando">Estas visualizando a</string>
    <string name="e2enfermo">¿Está enfermo?</string>
    <string name="e2dueno">Dueño</string>
    <string name="e2descripcion">Descripción</string>
    <!--STRING ENTREGABLE 3-->
    <string name="e3titulo">:: Animales ::</string>
    <string name="e3Inicio">Inicio</string>
    <string name="e3Agregar">Agregar</string>
    <string name="e3Editar">Editar</string>
    <string name="e3Borrar">Borrar</string>
    <string name="e3Guardar">Guardar</string>
    <string name="e3Imagen">Imagen</string>
    <string name="e3Detalle">Nombre de Animal</string>
    <string name="e3Actualizar">Actualizar</string>
    <string name="e3genero">Genero</string>
    <string name="e3urlinvalida">La URL proporcionada es inválida</string>
    <string name="sindatos">Sin Datos</string>
    <!---->
    <string name="c1lineal_t1">Ejemplo de LinerLayout 1</string>
    <string name="c1lineal_t2">Ejemplo de LinerLayout 2</string>
    <string name="c1lineal_t3">Ejemplo de LinerLayout 3</string>
    <string name="c2intento_exp_txt">Mostrar datos personales</string>
    <string name="c2frame_text">Ejemplo Layout</string>
    <string name="c3relative_title">Texto dentro de relative</string>
    <string name="c3relative_input">Introduce nombre</string>
    <string name="c3relative_enviar">Enviar</string>
    <string name="c3stringdescripcion">Descripción de imagen</string>
    <string name="c3labelcheck">Tienes credito</string>
    <string name="c3radiobtnM">Macho</string>
    <string name="c3radiobtnF">Hembra</string>
    <string name="c3otro">Otro</string>
    <string name="c3nombreusuario">Nombre de usuario</string>
    <string name="c4primerf">Primer fragmento</string>
    <string name="c4segundof">Segundo fragmento</string>
    <string name="c4texto">Texto debajo de fragmento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="c5opcion1">Opcion 1</string>
    <string name="c5opcion2">Opcion 2</string>
    <string name="c5opcion3">Opcion 3</string>
    <string name="c5opcion1txt">Opcion 1</string>
    <string name="c5opcion2txt">Opcion 2</string>
    <string name="c5opcion3txt">Opcion 3</string>
    <string name="c5hit">Insertar dato</string>
    <string name="c5btnguardar">Guardar</string>
    <string name="c5btnborrar">Borrar</string>
    <string name="c6btnmostrar">Mostrar</string>
    <string name="c6btnmodificar">Modificar</string>


</resources>