<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejerciciosclase.fragments.botonnavegacion.Opcion1Fragment"
    android:background="@drawable/degradado">

    <TextView
        android:text="@string/e3Agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e3eEditar"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/dorado_c"
        android:fontFamily="@font/mythias"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e3eEditar"
        android:id="@+id/e3eNombre"
        android:hint="@string/e1lt_nombre"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textColorHint="@color/blanco50"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e3eNombre"
        android:id="@+id/e3eImagen"
        android:hint="@string/e3Imagen"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textColorHint="@color/blanco50"
        />

    <EditText
        android:id="@+id/e3eDueno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e3eImagen"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/e2dueno"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco50"
        android:textSize="20sp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/e3eDueno"
        android:id="@+id/e3eGeneroAnimal"
        android:gravity="center"
        android:layout_margin="15dp"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/e3eMAnimal"
            android:text="@string/c3radiobtnM"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/e3eHAnimal"
            android:text="@string/c3radiobtnF"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />
    </RadioGroup>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e3eEnfermoAnimal"
        android:layout_below="@id/e3eGeneroAnimal"
        android:layout_centerHorizontal="true"
        android:text="@string/e2enfermo"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e3eEnfermoAnimal"
        android:id="@+id/e3eDescripcionAnimal"
        android:hint="@string/e2descripcion"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:textColorHint="@color/blanco50"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/e3eDescripcionAnimal"
        android:layout_centerHorizontal="true"
        android:text="@string/c5btnguardar"
        android:drawableRight="@drawable/ic_save"
        android:id="@+id/e3guardar"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/azul_o"
        />
</RelativeLayout>