<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entregables.Entregable1IntentResume"
    android:background="@color/azul_c"
    android:gravity="center"
    android:padding="20dp"
    >
    <!--android:layout_below="@id/e1v_tel"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_susses"
        android:id="@+id/e1vr_titulo"
        android:textColor="@color/dorado_c"
        android:textSize="25sp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"

        >
    </TextView>
    <!--NOMBRE-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_completo"
        android:id="@+id/e1vr_nombre"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        android:layout_below="@+id/e1vr_titulo"
        >
    </TextView>
    <!--EDAD-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_edad"
        android:id="@+id/e1vr_edad"
        android:layout_below="@id/e1vr_nombre"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        >
    </TextView>
    <!--TELÉFONO-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_tel"
        android:id="@+id/e1vr_tel"
        android:layout_below="@id/e1vr_edad"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        >
    </TextView>
    <!--CORREO-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_email"
        android:id="@+id/e1vr_correo"
        android:layout_below="@id/e1vr_tel"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        >
    </TextView>
    <Button
        android:id="@+id/e1vr_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_regresar"
        android:layout_below="@id/e1vr_correo"
        android:backgroundTint="@color/dorado_o"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blanco"
        android:layout_marginTop="10dp"
        >
    </Button>

</RelativeLayout>