<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejerciciosclase.layout.RelativeLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c3relative_title"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/c3textview"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/c3relative_input"
        android:textSize="20sp"
        android:id="@+id/c3etname"
        android:autofillHints="@string/c3relative_input"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c3relative_enviar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/c3etname"
        android:layout_marginTop="10dp"
        android:id="@+id/c3btnenviar"
        />
    <ImageButton
        android:src="@mipmap/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c3btnenviar"
        android:layout_centerHorizontal="true"
        android:id="@+id/c3imgbtn"
        android:layout_marginTop="15dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_below="@+id/c3textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/c3img"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/c3img"
        android:id="@+id/c3checkbox"
        android:text="@string/c3labelcheck"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/c3guporadio"
        android:layout_below="@id/c3checkbox"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/c3rF"
            android:text="@string/c3radiobtnF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/c3rM"
            android:text="@string/c3radiobtnM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/c3spiner"
        android:layout_below="@+id/c3guporadio"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>