<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejerciciosclase.database.SqliteActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c6etNombre"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c6etDescripcion"
        android:layout_below="@id/c6etNombre"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c6etDescripcion"
        android:text="@string/c5btnguardar"
        android:layout_centerHorizontal="true"
        android:id="@+id/c6btnSave"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c6btnSave"
        android:text="@string/c6btnmostrar"
        android:layout_centerHorizontal="true"
        android:id="@+id/c6btnShow"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c6btnShow"
        android:text="@string/c6btnmodificar"
        android:layout_centerHorizontal="true"
        android:id="@+id/c6btnUpdate"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c6btnUpdate"
        android:text="@string/c5btnborrar"
        android:layout_centerHorizontal="true"
        android:id="@+id/c6btnDell"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/e2ContenedorListaFragment"
        android:layout_below="@id/c6btnDell"
        />
</RelativeLayout>