<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entregables.Entregable1IntentMain"
    android:padding="20dp"
    android:background="@color/azul_o"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_titulo"
        android:id="@+id/e1vl_titulo"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        >
    </TextView>
    <!--NOMBRE-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_nombre"
        android:id="@+id/e1vl_nombre"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        android:layout_below="@+id/e1vl_titulo"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1v_nombre"
        android:layout_below="@id/e1vl_nombre"
        android:background="@color/azul_c"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:maxLines="1"
        >
    </EditText>
    <!--APELLIDO 1-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_apellido1"
        android:id="@+id/e1vl_apellido1"
        android:layout_below="@id/e1v_nombre"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1v_apellido1"
        android:layout_below="@id/e1vl_apellido1"
        android:background="@color/azul_c"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:maxLines="1"
        >
    </EditText>
    <!--APELLIDO 2-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_apellido2"
        android:id="@+id/e1vl_apellido2"
        android:layout_below="@id/e1v_apellido1"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1v_apellido2"
        android:layout_below="@id/e1vl_apellido2"
        android:background="@color/azul_c"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:maxLines="1"
        >
    </EditText>
    <!--EDAD-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_edad"
        android:id="@+id/e1vl_edad"
        android:layout_below="@id/e1v_apellido2"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1v_edad"
        android:layout_below="@id/e1vl_edad"
        android:background="@color/azul_c"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:inputType="number"
        android:maxLength="2"
        android:maxLines="1"
        >
    </EditText>
    <!--TELÉFONO-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_tel"
        android:id="@+id/e1vl_tel"
        android:layout_below="@id/e1v_edad"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1v_tel"
        android:layout_below="@id/e1vl_tel"
        android:background="@color/azul_c"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:inputType="phone"
        android:digits="0123456789+-"
        android:maxLength="15"
        android:maxLines="1"
        >
    </EditText>
    <!--CORREO-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_email"
        android:id="@+id/e1vl_correo"
        android:layout_below="@id/e1v_tel"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e1v_correo"
        android:layout_below="@id/e1vl_correo"
        android:background="@color/azul_c"
        android:textColor="@color/blanco"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        >
    </EditText>
    <Button
        android:id="@+id/e1v_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_btn"
        android:layout_below="@id/e1v_correo"
        android:backgroundTint="@color/dorado_o"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blanco"
        >
    </Button>


</RelativeLayout>