<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejerciciosclase.ExplisitoDetalleActivity">

    <TextView
        android:id="@+id/iNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:textSize="25sp"
        android:text="@string/e1lt_nombre"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/iApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iNombre"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/e1lt_apellido1"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/iEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iApellido"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/e1lt_edad"
        android:textSize="25sp" />

</RelativeLayout>