<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejerciciosclase.fragments.botonnavegacion.Opcion1Fragment"
    android:background="@color/azul_c">
    <TextView
        tools:text="@string/e3Detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e3eNombreAnimal"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/dorado_c"
        android:fontFamily="@font/mythias"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/e3RiconoAnimal"
        android:src="@drawable/perro_1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/e3eNombreAnimal"
        android:layout_marginTop="15dp"
        />
    <TextView
        tools:text="DUEÑO: PANCHO LOPEZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e3RDuenoAnimal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blanco"
        android:layout_below="@id/e3RiconoAnimal"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/e3RGeneroAnimal"
        android:layout_below="@id/e3RDuenoAnimal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/e3RMAnimal"
            android:text="@string/c3radiobtnM"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/e3REAnimal"
            android:text="@string/c3radiobtnF"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:layout_margin="5dp"
            />
    </RadioGroup>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e3REnfermoAnimal"
        android:layout_below="@id/e3RGeneroAnimal"
        android:layout_centerHorizontal="true"
        android:text="@string/e2enfermo"
        android:textColor="@color/blanco"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_margin="5dp"
        />
    <TextView
        tools:text="DESCRIPCIÓN DEL ANIMAL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e3RDescripcionAnimal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blanco"
        android:layout_below="@id/e3REnfermoAnimal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/e3RDescripcionAnimal"
        android:layout_marginTop="15dp"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/e3Editar"
        android:id="@+id/e3btneditar"
        android:drawableRight="@drawable/ic_edit"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/azul_o"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/e3Borrar"
        android:id="@+id/e3btnborrar"
        android:drawableRight="@drawable/ic_delete"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/azul_o"
        />
    </LinearLayout>
</RelativeLayout>