<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entregables.Entregable2DetallePetActivity"
    android:background="@color/azul_o"
    >

    <TextView
        tools:text="@string/e3nombrepet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e2RNombrePer"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/dorado_c"
        android:fontFamily="@font/mythias"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/e2RiconoPet"
        android:src="@drawable/perro_1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/e2RNombrePer"
        android:layout_marginTop="15dp"
        />
    <TextView
        tools:text="DUEÑO: PANCHO LOPEZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e2RDuenoPet"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blanco"
        android:layout_below="@id/e2RiconoPet"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/e2RGeneroPet"
        android:layout_below="@id/e2RDuenoPet"
        android:gravity="center"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/e2RMPet"
            android:text="@string/c3radiobtnM"
            android:textColor="@color/blanco"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/e2REPet"
            android:text="@string/c3radiobtnF"
            android:textColor="@color/blanco"
            />
    </RadioGroup>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e2REnfermoPet"
        android:layout_below="@id/e2RGeneroPet"
        android:layout_centerHorizontal="true"
        android:text="@string/e2enfermo"
        android:textColor="@color/blanco"
        />
    <TextView
        tools:text="DESCRIPCIÓN DEL PERRO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/e2RDescripcionPet"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/blanco"
        android:layout_below="@id/e2REnfermoPet"
        />
    <Button
        android:id="@+id/e2regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e1lt_regresar"
        android:layout_below="@id/e2RDescripcionPet"
        android:backgroundTint="@color/dorado_o"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blanco"
        android:layout_marginTop="20dp"
        >
    </Button>
</RelativeLayout>